# Google-Test-Simple

./: .gitignore  CMakeLists.txt  Makefile  README.md  function_need_to_test.cpp  function_need_to_test.h  test.cpp
